tests/error/wide_character_include.c
// fail "Wide character strings not support in '#include'."

#include  L"Ä";
